# dreamvault

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql
client/: Cargo.toml  sample.md  sample2.md  sample3.md
client/src/: commands.rs  main.rs  requests.rs  sys.rs  tests.rs  vault.rs
server/: .clang-format  Makefile  a.out  db_test  hehe  htesting  server  testxd
server/src/: api.c  api_xd.c  config.h  db.c  db.h  db_testing.c  db_testing.h  final_api.c  final_api.h  final_db.c  final_db.h  final_http.c  final_http.h  final_main.c  final_server.c  final_server.h  final_sys.c  final_task.c  final_task.h  http_parser.c  http_parser.h  http_xd.c  http_xd.h  server_linux.c  sys.c  sys.h  task_testing.h  tasks.c  tasks_testing.c  tests.c  util.c  util.h  worker.c
server/src/old/: api.h  api_xd.h  db.c  http-testing.c  http_parser.h  http_xd.c  http_xd.h  main.c  server_windows.c  testxd.c  worker.h
server/tests/: http.c
