[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
http = "1.0"
serde_json = "1.0"
chrono = "0.4.38"
serde_yaml = "0.9"
